put scripts back in HTML

--- a/public/index.html
+++ b/public/index.html
@@ -12,6 +12,12 @@
 
   <body>
     <div id="webgl"></div>
-    <script type="module" src="main.js"></script>
+
+    <script src="/nm/three/build/three.min.js"></script>
+    <script src="/nm/dat.gui/build/dat.gui.js"></script>
+    <script src="/nm/three/examples/js/loaders/GLTFLoader.js"></script>
+    <script src="/nm/@enable3d/lib/enable3d/enable3d.ammoPhysics.0.22.0.min.js"></script>
+    <script src="/nm/three/examples/js/controls/OrbitControls.js"></script>
+    <script src="main.js"></script>
   </body>
 </html>
