physics example working

--- a/public/index.html
+++ b/public/index.html
@@ -18,6 +18,6 @@
     <script src="/nm/three/examples/js/loaders/GLTFLoader.js"></script>
     <script src="/nm/@enable3d/lib/enable3d/enable3d.ammoPhysics.0.22.0.min.js"></script>
     <script src="/nm/three/examples/js/controls/OrbitControls.js"></script>
-    <script src="main.js"></script>
+    <script src="example.js"></script>
   </body>
 </html>
